apps/dssp-targetnode-4/dev/deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: dssp-targetnode-4
#   namespace: dev
#   labels:
#     app: dssp-targetnode-4
#     backstage.io/kubernetes-id: dssp-targetnode-4
#     environment: dev
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: dssp-targetnode-4
#   template:
#     metadata:
#       labels:
#         app: dssp-targetnode-4
#         backstage.io/kubernetes-id: dssp-targetnode-4
#         environment: dev
#     spec:
#       containers:
#         - name: dssp-targetnode-4
#           image: chaitanyapandeygspann/dssp-targetnode-4:1.0.2
#           ports:
#             - containerPort: 3000
#           env:
#             - name: APP_ENV
#               value: "dev"



apiVersion: apps/v1
kind: Deployment
metadata:
  name: dssp-targetnode-4
  namespace: dev
  labels:
    app: dssp-targetnode-4
    backstage.io/kubernetes-id: dssp-targetnode-4
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dssp-targetnode-4
  template:
    metadata:
      labels:
        app: dssp-targetnode-4
        backstage.io/kubernetes-id: dssp-targetnode-4
        environment: dev
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
    spec:
      containers:
        - name: dssp-targetnode-4
          image: chaitanyapandeygspann/dssp-targetnode-4:1.0.2
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "10m"
              ephemeral-storage: "50Mi"
            limits:
              memory: "128Mi"
              cpu: "100m"
              ephemeral-storage: "100Mi"
      ignoreDifferences:
        - group: apps
          kind: Deployment
          jsonPointers:
            - /spec/template/spec/containers/0/resources
