apps/dssp-targetnode-4/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dssp-targetnode-4
  namespace: dev
  labels:
    backstage.io/kubernetes-id: dssp-targetnode-4
    environment: dev
spec:
  selector:
    app: dssp-targetnode-4
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
 


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: dssp-targetnode-4-ingress
# spec:
#   ingressClassName: gce
#   rules:
#   - host: dssp-targetnode-4.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: dssp-targetnode-4
#             port:
#               number: 80
